sbt opts